@@ -83,5 +83,6 @@
     <printer><id>printer/Minolta-PagePro_1250W</id></printer>
     <printer><id>printer/Minolta-PagePro_1300W</id></printer>
     <printer><id>printer/Minolta-PagePro_1350W</id></printer>
+    <printer><id>printer/Minolta-PagePro_1400W</id></printer>
   </printers>
 </driver>
