@@ -40,6 +40,12 @@
       <driver>min12xxw</driver>
       <arg_defval>ev/min12xxw-Model-1350W</arg_defval>
      </constraint>
+     <constraint sense="true">
+      <make>Minolta</make>
+      <model>PagePro 1400W</model>
+      <driver>min12xxw</driver>
+      <arg_defval>ev/min12xxw-Model-1400W</arg_defval>
+     </constraint>
   </constraints>
   <enum_vals>
    <enum_val id="ev/min12xxw-Model-1200W">
@@ -130,6 +136,29 @@
      <constraint sense="true">
       <make>Minolta</make>
       <model>PagePro 1350W</model>
+      <driver>min12xxw</driver>
+     </constraint>
+    </constraints>
+   </enum_val>
+   <enum_val id="ev/min12xxw-Model-1400W">
+    <ev_longname>
+     <en>Minolta PagePro 1400W</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>1400W</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>1400W</ev_driverval>
+    <constraints>
+     <constraint sense="false">
+      <driver>min12xxw</driver>
+     </constraint>
+     <constraint sense="true">
+      <make>Minolta</make>
+      <model>PagePro 1400W</model>
       <driver>min12xxw</driver>
      </constraint>
     </constraints>
