@@ -1,0 +1,36 @@
+<printer id="printer/Minolta-PagePro_1400W">
+  <make>Minolta</make>
+  <model>PagePro 1400W</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+    <!--no comments--><!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.minolta-qms.com/products/monochrome/pp1400W/index.asp</url>
+  <lang>
+    <proprietary>
+    </proprietary>
+  </lang>
+  <autodetect>
+    <usb>
+      <manufacturer>KONICA MINOLTA</manufacturer>
+      <model>PP1400W</model>
+      <description>KONICA MINOLTA PP1400W</description>
+      <commandset>NA</commandset>
+    </usb>
+  </autodetect>
+  <functionality>B</functionality>
+  <driver>min12xxw</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+     Low cost laser.
+    </en>
+  </comments>
+</printer>
