@@ -1,3 +1,9 @@
+2006-01-05  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Minolta-PagePro_1400W.xml, driver/min12xxw,
+	  opt/min12xxw-Model.xml: Added the Minolta PagePro 1400W
+	  (supported by the "min12xxw" driver).
+	
 2006-01-03  Tim Waugh  <twaugh@redhat.com>
 
 	* printer/HP-PSC_1400.xml: Corrected IEEE 1284
